--- a/plagiat ed.css
+++ b/plagiat ed.css
@@ -57,8 +57,8 @@ img {
 }
 
 html {
-       font-family:"CORBEL";
-	src:"CORBEL.ttf";
+  font-family:"CORBEL";
+	src:"corbel/CORBEL.ttf";
 	text-indent: 0;
 	color: black;
 }
