--- a/plagiat_ed_mediatheque.css
+++ b/plagiat_ed_mediatheque.css
@@ -88,14 +88,17 @@ html {
 }
 
 td{   border: 1px solid;
+	color: white;
 	vertical-align : top }
 
 .table{
 	   padding: 2px;
-    border: 1px solid
+    border: 1px solid;
+	color: white
 }
 th{
   border: 1px solid;
+color: white;
 }
 
 .menu li:hover {
